# ectypeRB

./: README.md  main.py  pyproject.toml  uwsgi.ini
ectypeRB/: init_db.py  manage.py
ectypeRB/ectypeRB/: asgi.py  settings.py  urls.py  wsgi.py
ectypeRB/loginManagement/: apps.py  middleware.py  models.py  tests.py  urls.py  views.py
ectypeRB/loginManagement/migrations/: 0001_initial.py
ectypeRB/main/: models.py  urls.py
ectypeRB/main/migrations/: 0001_initial.py
ectypeRB/main/tests/: test_comment.py  test_post.py  test_user.py
ectypeRB/main/views/: comment.py  post.py  user.py
ectypeRB/requests/: 0-loginManagement.rest  1-userAPI.rest
ectypeRB/utils/: aux.py  jwt_token.py
